--- a/index.html
+++ b/index.html
@@ -12,5 +12,10 @@
     <script src="index.js"></script>
   </head>
 
-  <body id="body" onload="load()"></body>
+  <body id="body" onload="load()">
+    <nav role="main">
+      <a href="link.com">link</a>
+    </nav>
+    <div id="imageContainer"></div>
+  </body>
 </html>
