--- a/index.html
+++ b/index.html
@@ -13,9 +13,7 @@
   </head>
 
   <body id="body" onload="load()">
-    <nav role="main">
-      <a href="link.com">link</a>
-    </nav>
+    <nav role="main"></nav>
     <div id="imageContainer"></div>
   </body>
 </html>
