--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
 
     <link rel="stylesheet" href="style.css" />
     <script src="index.js"></script>
+    <script src="navigation.js"></script>
   </head>
 
   <body id="body" onload="load()">
