--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="style.css" />
     <script src="index.js"></script>
     <script src="navigation.js"></script>
+    <script src="DataObject.js"></script>
   </head>
 
   <body id="body" onload="load()">
