--- a/index.html
+++ b/index.html
@@ -18,11 +18,10 @@
     <nav role="main"><label id="currentSelectionLabel"></label></nav>
     <div id="imageContainer"></div>
 
-    <!-- The Modal -->
+      <!-- Modal -->
     <div id="previewModal" class="modal">
-      <!-- Modal content -->
-      <div class="preview-content">
-        <img id="previewImage"></img>
+      <div class="modal-content">
+        <img id="modalImage"></img>
       </div>
     </div>
   </body>
