--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <title>Homework</title>
 
     <link rel="stylesheet" href="style.css" />
-    <script src="index.js"></script>
+    <script type="module" src="index.js"></script>
   </head>
 
   <body id="body" onload="load()">
