--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <script type="module" src="index.js"></script>
   </head>
 
-  <body id="body" onload="load()">
+  <body id="body">
     <nav role="main"><label id="currentSelectionLabel"></label></nav>
     <div id="imageContainer"></div>
 
